# Murmure

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
models/speaker_embeddings/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
src/: utils.py
src/modules/: __init__.py
src/modules/speaker_recognition/: speaker_recognition.py  type.py
src/modules/transcription/: transcription.py
src/modules/vad/: types.py  vad.py
src/murmure/: __main__.py
src/murmure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/murmure/modules/: __init__.py
src/murmure/modules/speaker_diarization/: __init__.py  clustering.py  speaker_diarization.py
src/murmure/modules/transcription/: __init__.py  transcription.py
src/murmure/modules/vad/: __init__.py  vad.py
src/murmure/pipeline/: classic_pipeline.py
src/murmure/types/: core.py
src/murmure/utils/: logger.py  settings.py  utils.py  whispercpp_utils.py
src/pipeline/: classic_pipeline.py  full_transcription_pipeline.py
transcriptions/: fianso.txt  fianso_cppp.txt  test.txt  test_konb.txt  test_konb_v1.txt  test_konb_v2.txt
